# xranc

./: .gitignore  .gitmodules  Makefile  README.md
common/include/: asn.h  logger.h
database/: deployRedisDB.sh  redis-msg-gw-poc.cpp  redis-msg-gw-poc.sh
enbsim/: Makefile  asn_common.cpp  asn_common.h  cell_config.cpp  cell_config.h  config-ip.sh  config.cpp  config.h  context.cpp  context.h  dispatch.cpp  dispatch.h  enbsim.cpp  enbsim.h  enbsim.json  main.cpp  ue.cpp  ue.h
protos/: c1-interface.proto  e2-interface.proto
ric-api-gw/: CMakeLists.txt
ric-api-gw/APIs/Bundles/: AbstractBundleComponent.h
ric-api-gw/APIs/Common/: APIGwLogServiceWrapper.h
ric-api-gw/APIs/GWCore/: AbstractGWCoreComponent.h
ric-api-gw/APIs/MatchAction/: Action.h  Match.h  RegistrationStatement.h  RuleStatement.h  Statement.h
ric-api-gw/Bundles/ONOSBundle/: CMakeLists.txt
ric-api-gw/Bundles/ONOSBundle/Activator/: ONOSBundleActivator.cpp  ONOSBundleActivator.h
ric-api-gw/Bundles/ONOSBundle/Component/: ONOSBundleComponent.cpp  ONOSBundleComponent.h
ric-api-gw/Bundles/RedisBundle/: CMakeLists.txt
ric-api-gw/Bundles/RedisBundle/Activator/: RedisBundleActivator.cpp  RedisBundleActivator.h
ric-api-gw/Bundles/RedisBundle/Component/: RedisBundleComponent.cpp  RedisBundleComponent.h
ric-api-gw/Bundles/RedisBundle/RedisHandler/RedisHandlerImpls/: RedisHandlerImpl-CellConfigReport.cpp  RedisHandlerImpl-CellConfigReport.h
ric-api-gw/Bundles/SBBundle/: CMakeLists.txt
ric-api-gw/Bundles/SBBundle/API/e2-interface/: e2-interface.proto  gRPCServerE2Interface.cpp  gRPCServerE2Interface.h
ric-api-gw/Bundles/SBBundle/Activator/: SBBundleActivator.cpp  SBBundleActivator.h
ric-api-gw/Bundles/SBBundle/Component/: SBBundleComponent.cpp  SBBundleComponent.h
ric-api-gw/Bundles/SBBundle/gRPCHandler/gRPCServerImpls/: gRPCServerImpl-CellConfigReport.cpp  gRPCServerImpl-CellConfigReport.h  gRPCServerImpl-UEAdmissionStatus.cpp  gRPCServerImpl-UEAdmissionStatus.h  gRPCServerImpl-UEContextUpdate.cpp  gRPCServerImpl-UEContextUpdate.h
ric-api-gw/GWCore/: CMakeLists.txt
ric-api-gw/GWCore/Activator/: GWCoreActivator.cpp  GWCoreActivator.h
ric-api-gw/GWCore/Component/: GWCoreComponent.cpp  GWCoreComponent.h
xranc/: Makefile  bearer.cpp  bearer.h  cell_config.cpp  cell_config.h  client.cpp  client.h  config.cpp  config.h  dispatch.cpp  dispatch.h  handler.cpp  handler.h  ho.cpp  main.cpp  server.cpp  server.h  ue_admission.cpp  ue_admission.h  workqueue.cpp  workqueue.h  xran-cfg.json  xranc_sb_api.h
xranc-nb-api-src/: Makefile
xranc-nb-api-src/gRPCAPIs/cpp/gRPCClients/: gRPCClient-CellConfigReport.cpp  gRPCClient-CellConfigReport.h  gRPCClient-UEAdmissionStatus.cpp  gRPCClient-UEAdmissionStatus.h  gRPCClient-UEContextUpdate.cpp  gRPCClient-UEContextUpdate.h  gRPCClient.cpp  gRPCClient.h
xranc-nb-api-src/gRPCAPIs/cpp/gRPCParams/: gRPCParam-CellConfigReportMsg.h  gRPCParam-ConfigurationMsg.cpp  gRPCParam-ConfigurationMsg.h  gRPCParam-ProceduralMsg.cpp  gRPCParam-ProceduralMsg.h  gRPCParam-UEAdmissionStatusMsg.cpp  gRPCParam-UEAdmissionStatusMsg.h  gRPCParam-UEContextUpdateMsg.cpp  gRPCParam-UEContextUpdateMsg.h  gRPCSubParam-CandScellMsg.cpp  gRPCSubParam-CandScellMsg.h  gRPCSubParam-ECGIMsg.cpp  gRPCSubParam-ECGIMsg.h  gRPCSubParam-Msg.cpp
xranc-nb-api-src/gRPCAPIs/cpp/gRPCServers/: gRPCServer-CellConfigReport.cpp  gRPCServer-CellConfigReport.h  gRPCServer-UEAdmissionStatus.cpp  gRPCServer-UEAdmissionStatus.h  gRPCServer-UEContextUpdate.cpp  gRPCServer-UEContextUpdate.h  gRPCServer.cpp  gRPCServer.h
xranc-nb-api-src/gRPCHandlers/gRPCClients/: gRPCClient-CellConfigReport.cpp  gRPCClient-CellConfigReport.h
xranc-nb-api-src/gRPCHandlers/gRPCParams/: gRPCParam-CellConfigReportMsg.cpp  gRPCParam-Msg.cpp  gRPCParam-Msg.h  gRPCSubParam-Msg.h
xranc-nb-api-src/protobufs/: gRPC-CellConfigReport.proto  gRPC-UEAdmissionStatus.proto  gRPC-UEContextUpdate.proto
xranc-sb-api-src/: A1Param.c  A1Param.h  A2Param.c  A2Param.h  A3Param.c  A3Param.h  A4Param.c  A4Param.h  A5Param.c  A5Param.h  A6Param.c  A6Param.h  ARFCN-Value.c  ARFCN-Value.h  AdmEstCause.c  AdmEstCause.h  AdmEstResponse.c  AdmEstResponse.h  AdmEstStatus.c  AdmEstStatus.h  BearerAdmissionRequest.c  BearerAdmissionRequest.h  BearerAdmissionResponse.c  BearerAdmissionResponse.h  BearerAdmissionStatus.c  BearerAdmissionStatus.h  BearerReleaseInd.c  BearerReleaseInd.h  BitRate.c  BitRate.h  CACap.c  CACap.h  CRNTI.c  CRNTI.h  CandScell.c  CandScell.h  CellConfigReport.c  CellConfigReport.h  CellConfigRequest.c  CellConfigRequest.h  (+153 more)
xranc/api/e2-interface/: e2-interface.proto  gRPCClientE2Interface.cpp  gRPCClientE2Interface.h
xranc/gRPCHandlers/gRPCClientImpls/: gRPCClientImpl-CellConfigReport.cpp  gRPCClientImpl-CellConfigReport.h  gRPCClientImpl-UEAdmissionStatus.cpp  gRPCClientImpl-UEAdmissionStatus.h  gRPCClientImpl-UEContextUpdate.cpp  gRPCClientImpl-UEContextUpdate.h
